# open-box

./: .gitignore  AUTHORS  ChangeLog  LICENSE  README.md  requirements  requirements.txt  setup.cfg  setup.py
examples/conf/: yaml_conf.py
examples/datetime/: dt.py
examples/email/: send.py
examples/exception/: retry.py
examples/file/: audio.py  base.py  image.py  video.py
examples/log/: log1.py
examples/redis/: basic.py  cache.py  limiter.py  locker.py
examples/track/: __init__.py  run.py  test.py
examples/xlsx/: reader.py  writer.py
examples/zip/: package.py
examples/zip/test/: fp.txt  本地文件.txt
open_box/: __init__.py  enum.py
open_box/conf/: __init__.py  yaml_loader.py
open_box/datetime/: __init__.py
open_box/email/: __init__.py
open_box/enum/: __init__.py  enum.py
open_box/exception/: retry.py
open_box/file/: __init__.py  audio.py  error.py  image.py  video.py
open_box/log/: __init__.py  formatter.py
open_box/redis/: __init__.py  cache.py  limiter.py  locker.py
open_box/redis/limiter/: __init__.py  rate.py
open_box/track/: __init__.py
open_box/xlsx/: reader.py  writer.py
open_box/zip/: __init__.py
