[metadata]
name = open-box
version = 1.0
author = HNF
long_description = file:
license = MIT
url = https://github.com/Haner27/open-box.git
classifiers = # PyPI的分类，类似于标签，所有条目见 https://pypi.org/pypi?%3Aaction=list_classifiers
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries
    'Intended Audience :: Developers',


[options]
packages = find:
install_requires = # 依赖，pip安装时靠的就是这个而不是requirements.txt
    requests