[metadata]
name = open-box
version = 1.0.4
author = HNF
author-email = 369685930@qq.com
summary = "this is web development utils"
long_description = file:
license = MIT
url = https://github.com/Haner27/open-box.git
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries
    'Intended Audience :: Developers',


[files]
packages = open_box