[metadata]
name = open-box
version = 1.0.7
author = HNF
author-email = 369685930@qq.com
summary = "this is web development utils"
long_description = file:
license = MIT
url = https://github.com/Haner27/open-box.git
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries
    'Intended Audience :: Developers',


[files]
packages = open_box

[options]
packages = find:
install_requires =
    addict==2.4.0
    redis-py-cluster==2.1.0
    bson==0.5.10
    pyaml==20.4.0
    xlsxwriter==1.3.3
    xlrd==1.2.0
    python-magic==0.4.15
    pillow==8.0.0
    pymediainfo==4.2.1
    six~=1.15.0